// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`crewdress.js - {"bogus":true} format 1`] = `
====================================options=====================================
bogus: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
  ? {
      spaceSuit: 3,
      oxygenCylinders: 6,
    }
  : {
      shirts: 3,
      paints: 3,
    };

================================================================================
`;

exports[`crewdress.js - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
    ? {
          spaceSuit: 3,
          oxygenCylinders: 6,
      }
    : {
          shirts: 3,
          paints: 3,
      };

================================================================================
`;

exports[`crewdress.js - {"useTabs":true,"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
			spaceSuit: 3,
			oxygenCylinders: 6,
	  }
	: {
			shirts: 3,
			paints: 3,
	  };

================================================================================
`;

exports[`crewdress.js - {"useTabs":true} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
useTabs: true
                                                                                | printWidth
=====================================input======================================
let isSpace = false

const dress = isSpace ? {
      spaceSuit: 3,
      oxygenCylinders: 6
    } : {
      shirts: 3,
      paints: 3
    }

=====================================output=====================================
let isSpace = false;

const dress = isSpace
	? {
			spaceSuit: 3,
			oxygenCylinders: 6,
	  }
	: {
			shirts: 3,
			paints: 3,
	  };

================================================================================
`;

exports[`nested-ternary-promises.js - {"bogus":true} format 1`] = `
====================================options=====================================
bogus: true
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
    ? condition2
      ? Promise(1)
      : Promise(2)
    : condition3
    ? Promise(3)
    : Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
    return condition1
        ? condition2
            ? Promise(1)
            : Promise(2)
        : condition3
        ? Promise(3)
        : Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"useTabs":true,"tabWidth":4} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
tabWidth: 4
useTabs: true
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
	return condition1
		? condition2
			? Promise(1)
			: Promise(2)
		: condition3
		? Promise(3)
		: Promise(4);
}

================================================================================
`;

exports[`nested-ternary-promises.js - {"useTabs":true} format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "flow", "typescript"]
printWidth: 80
useTabs: true
                                                                                | printWidth
=====================================input======================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
  return condition1
  ? condition2
    ? Promise(1)
    : Promise(2)
  : condition3
    ? Promise(3)
    : Promise(4)
}

=====================================output=====================================
// check for consistent formatting as discussed in:
// - https://github.com/eslint/eslint/issues/13971
// - https://github.com/standard/standard/issues/1624
// - https://github.com/brodybits/prettierx/issues/41

function test1() {
	return condition1
		? condition2
			? Promise(1)
			: Promise(2)
		: condition3
		? Promise(3)
		: Promise(4);
}

================================================================================
`;
